<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fb9dc6">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/glucose_edit_text"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/glucose_hint"
                android:inputType="numberDecimal"
                android:backgroundTint="#ffffff"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"

                />

            <TextView
                android:id="@+id/glucose_uom_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glucose_uom"
                android:textStyle="bold"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/resistin_edit_text"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/resistin_hint"
                android:inputType="numberDecimal"
                android:backgroundTint="#ffffff"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                />

            <TextView
                android:id="@+id/resistin_uom_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resistin_uom"
                android:textStyle="bold"
                android:textColor="#ffffff"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/age_edit_text"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/age_hint"
                android:inputType="number"
                android:backgroundTint="#ffffff"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/leptin_uom_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_uom"
                android:textStyle="bold"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/bmi_edit_text"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/bmi_hint"
                android:autofillHints="@string/bmi_hint"
                android:inputType="numberDecimal"
                android:backgroundTint="#ffffff"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                />

            <TextView
                android:id="@+id/bmi_uom_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_uom"
                android:textStyle="bold"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/result_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/result_button_text"
                android:textColor="#ffffff"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onResultButtonClick"/>


        </LinearLayout>



    </LinearLayout>
</ScrollView>
