<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppFragment"
    android:background="#fb9dc6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_cancer_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_cancer_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="19sp"
            android:textColor="#ffffff"/>

        <ImageView
            android:id="@+id/breast_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/breast" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_cancer_types_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_cancer_types_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="19sp"
            android:textColor="#ffffff"/>



    </LinearLayout>


</ScrollView>